.kube/explorer.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi-explorer
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: api
    tier: frontend
    version: 1.0.0
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: api
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: explorer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
      tier: frontend
  template:
    metadata:
      labels:
        app: api
        tier: frontend
        version: 1.0.0
    spec:
      containers:
        - name: webapi-explorer
          image: gcr.io/ut-dts-agrc-web-api-dv/api.mapserv.utah.gov/api-explorer
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 35
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 36
            periodSeconds: 15
