.kube/gke-deployment.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapi-ingress
  # annotations:
  # kubernetes.io/ingress.global-static-ip-name: mmh-dev-cluster-ingress # Created in terraform
  # kubernetes.io/ingress.allow-http: "false"
spec:
  # tls:
  # - secretName: managed-cert
  rules:
    # - host: api.mapserv.utah.gov
    - http:
        paths:
          - path: /api/*
            backend:
              serviceName: webapi-api
              servicePort: http
    # - host: api.mapserv.utah.gov
    - http:
        paths:
          - path: /*
            backend:
              serviceName: webapi-explorer
              servicePort: http
  # - host: developer.mapserv.utah.gov
  #   http:
  #     paths:
  #     - path: /*
  #       backend:
  #         serviceName: webapi-developer
  #         servicePort: http
---
apiVersion: v1
kind: Service
metadata:
  name: webapi-api
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: api
    tier: backend
    version: 1.0.0
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 1337
  selector:
    app: api
    tier: backend
---
apiVersion: v1
kind: Service
metadata:
  name: webapi-explorer
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: api
    tier: frontend
    version: 1.0.0
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: api
    tier: frontend
---
kind: Service
apiVersion: v1
metadata:
  name: geocoding-host
spec:
  type: ExternalName
  externalName: mapserv.utah.gov #: redirects host traffic to this external resource
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
      tier: backend
  template:
    metadata:
      labels:
        app: api
        tier: backend
        version: 1.0.0
    spec:
      volumes:
        - name: appsettings-config
          configMap:
            name: app-config
      containers:
        - name: webapi-api
          image: gcr.io/ut-dts-agrc-web-api-dv/api.mapserv.utah.gov/api
          imagePullPolicy: Always
          volumeMounts:
            - name: appsettings-config
              mountPath: /app/appsettings.json
              subPath: appsettings.json
          ports:
            - containerPort: 1337
          readinessProbe:
            httpGet:
              path: /
              port: 1337
            initialDelaySeconds: 35
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 1337
            initialDelaySeconds: 36
            periodSeconds: 15
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: explorer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
      tier: frontend
  template:
    metadata:
      labels:
        app: api
        tier: frontend
        version: 1.0.0
    spec:
      containers:
        - name: webapi-explorer
          image: gcr.io/ut-dts-agrc-web-api-dv/api.mapserv.utah.gov/api-explorer
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 35
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 36
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: postgres
    tier: backend
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: postgres
      tier: backend
  template:
    metadata:
      labels:
        app: postgres
        tier: backend
        version: 1.0.0
    spec:
      containers:
        - name: db
          image: gcr.io/ut-dts-agrc-web-api-dv/api.mapserv.utah.gov/db
          imagePullPolicy: Always
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
