.kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: webapi-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: web-api-cluster-ingress # Created in terraform
    networking.gke.io/managed-certificates: agrc-api-managed-cert
spec:
  rules:
    # - host: agrc-api.dev.utah.gov
    - http:
        paths:
          - path: /*
            backend:
              serviceName: webapi-api
              servicePort: http
    # # - host: agrc-api.dev.utah.gov
    # - http:
    #     paths:
    #       - path: /*
    #         backend:
    #           serviceName: webapi-explorer
    #           servicePort: http
  # - host: developer.mapserv.utah.gov
  #   http:
  #     paths:
  #     - path: /*
  #       backend:
  #         serviceName: webapi-developer
  #         servicePort: http
